# ConvertDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/we/convertdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Mp3Encoder.cpp  Mp3Encoder.h  fft.h  lame.cpp
app/src/main/java/com/we/convertdemo/: Convert.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/we/convertdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
